lint clean up complete