@@ -2,21 +2,24 @@ import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileWriter;
+import java.io.IOException;
 import java.io.PrintWriter;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.Formatter;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
+import java.util.logging.FileHandler;
+import java.util.logging.Handler;
+import java.util.logging.Logger;
 
 public class InvoiceRecords {
 
   //properties
-  private List < InvoiceRecord > invoices = new ArrayList < InvoiceRecord > ();
+  private List < InvoiceRecord > invoices = new ArrayList <> ();
 
   //constructor	
-  public InvoiceRecords() {
+  public InvoiceRecords() throws IOException {
 
     // read through the invoices text file 
 
@@ -42,26 +45,27 @@ public class InvoiceRecords {
 
     } catch (FileNotFoundException e) {
 
-      System.out.println("Invoices file not found");
+		Handler handler = new FileHandler("data/errors.log");
+		Logger.getLogger("Invoices file not found").addHandler(handler);
 
     }
 
   }
 
   //method to reorder and store sales records 
-  public void saveToFile(Integer orderNumber, String customerName, String location) {
+  public void saveToFile(Integer orderNumber, String customerName, String location) throws SecurityException, IOException {
 
 	//build the new record string  
     String recordTxt = '\n' + orderNumber + ", " + customerName + ", " + location;
 
-    try {
+    try (FileWriter fw = new FileWriter("data/invoices.txt", true)){
 
       //append the invoice summary to file
       //https://www.java67.com/2015/07/how-to-append-text-to-existing-file-in-java-example.html#ixzz7AxW2pTmz
       // In order to append text to a file, you need to open
       // file into append mode, you do it by using
       // FileReader and passing append = true
-      FileWriter fw = new FileWriter("data/invoices.txt", true);
+      
       BufferedWriter bw = new BufferedWriter(fw);
       PrintWriter pw = new PrintWriter(bw);
 
@@ -70,11 +74,12 @@ public class InvoiceRecords {
 
       pw.close();
       bw.close();
-      fw.close();
 
-    } catch (Exception e) {
+
+    } catch (SecurityException | IOException e) {
       //Something went wrong
-      System.out.println("Invoices file not found");
+		Handler handler = new FileHandler("data/errors.log");
+		Logger.getLogger("Invoices file not found").addHandler(handler);
     }
 
   }
@@ -82,12 +87,11 @@ public class InvoiceRecords {
   //method to reorder and store sales records 
   public void orderByCustomer() {
 
-    List < InvoiceRecord > invoices = this.invoices;
 
     //sort the list alphabetically by customer name, case insensitive
     List < InvoiceRecord > sortedList = invoices.stream()
       .sorted(Comparator.comparing(InvoiceRecord::getCustomer, String.CASE_INSENSITIVE_ORDER))
-      .collect(Collectors.toList());
+      .toList();
 
     this.invoices = sortedList;
 
@@ -96,12 +100,12 @@ public class InvoiceRecords {
   //method to reorder and store sales records 
   public void orderByLocation() {
 
-    List < InvoiceRecord > invoices = this.invoices;
-
     //sort the list alphabetically by location, case insensitive
     List < InvoiceRecord > sortedList = invoices.stream()
       .sorted(Comparator.comparing(InvoiceRecord::getLocation, String.CASE_INSENSITIVE_ORDER))
-      .collect(Collectors.toList());
+      .toList();
+    
+    
     this.invoices = sortedList;
 
   }
@@ -109,15 +113,12 @@ public class InvoiceRecords {
   
   //function to rewrite the ordered list based on lists sorted in functions above
   public String generateFile() {
-    try {
+    try (Formatter writer = new Formatter("data/ordered.txt")) {
 
-      Formatter writer = new Formatter("data/ordered.txt");
-
-      this.invoices.forEach((InvoiceRecord) -> {
-        writer.format("%s%n", InvoiceRecord.toString());
+      this.invoices.forEach((invoiceRecord) -> {
+        writer.format("%s%n", invoiceRecord.toString());
       });
 
-      writer.close();
 
       return "data/ordered.txt";
 
